# ros_program

./: .gitignore  README.md
src/: CMakeLists.txt  GIT_PUSH_RECORD.md
src/robot_description/: urdf.rviz
src/robot_description/config/: control.yaml
src/robot_description/launch/: display.launch  gazebo.launch  robot_model_visual.launch
src/robot_description/meshes/: base_link.STL  imu_Link.STL  laser_Link.STL  wheel_left_Link.STL  wheel_right_Link.STL  wheel_universal_Link.STL
src/robot_description/urdf/: robot_description.gazebo.xacro  robot_description.urdf  robot_description.urdf.xacro
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: com.csv  rk_map_v2.csv  rk_map_v4.csv  rk_map_v4_improve.csv
src/robot_navigation/launch/: map_saver.launch  map_saver_v2.launch  move_base.launch  navigation.launch  rk_navigation.launch
src/robot_navigation/launch/include/: amcl.launch  cartographer.launch  gmapping.launch  hector.launch  karto.launch
src/robot_navigation/launch/rviz/: navigation_rviz.launch  slam_rviz.launch
src/robot_navigation/map/: map.pgm  map.yaml  rk_map.pgm  rk_map.yaml  rk_map_v2.pgm  rk_map_v2.yaml  rk_map_v4.pgm  rk_map_v4.yaml  rk_map_v4_2.pgm  rk_map_v4_2.yaml
src/robot_navigation/param/params_costmap_common/: costmap_common_params.yaml  local_costmap_params.yaml
src/robot_navigation/param/params_nav_common/: dwa_local_planner_params.yaml  move_base_params.yaml  simple_local_planner.yaml  smooth_waypoint_planner_params.yaml  teb_local_planner_params.yaml
src/robot_navigation/rviz/: navigation.rviz  navigation_showMark.rviz  navigation_v4.rviz  navigation_v4_1.rviz  navigation_v4_2.rviz  slam.rviz
src/robot_navigation/scripts/: detect_plate.py  detect_plate_1.py  mission.py  rk_nav.py  rk_nav_yolo.py
src/robot_navigation/scripts/pic/: get_camera.py
src/robot_navigation/srv/: RecognizeWaypoint.srv  detect.srv
src/robot_simulation/: CMakeLists.txt  package.xml
src/robot_simulation/launch/: car.launch  gazebo_world.launch  simulation.launch
src/robot_simulation/models/com_map/: com_map.sdf  model.config
src/robot_simulation/models/com_map/materials/scripts/: com_map.material
src/robot_simulation/models/cpwhite/: model.config  model.sdf
src/robot_simulation/models/cpwhite/meshes/: cp.dae
src/robot_simulation/models/rk_box1/: model.config  model.sdf
src/robot_simulation/models/rk_box1/meshes/: rk_box1.dae
src/robot_simulation/models/rk_box2/: model.config  model.sdf
src/robot_simulation/models/rk_box2/meshes/: rk_box2.dae
src/robot_simulation/models/rk_map/: model.config  rk_map.sdf
src/robot_simulation/models/rk_map/materials/scripts/: com_map.material
src/robot_simulation/models/rk_square/: model.config  model.sdf
src/robot_simulation/models/rk_square_v2/: model.config  model.sdf
src/robot_simulation/models/ro1/: model.sdf
src/robot_simulation/models/ro2/: model.sdf
src/robot_simulation/rviz/: car.rviz
src/robot_simulation/world/: competition.world  rk_map.world  rk_map_v2.world  rk_map_v3.world  rk_map_v4.world
src/robot_simulation/world/square.world/: model.config  model.sdf
src/simple_local_planner/: CMakeLists.txt  package.xml  simple_local_planner.xml
src/simple_local_planner/include/: simple_local_planner.h
src/simple_local_planner/param/: simple_local_planner.yaml
src/simple_local_planner/src/: simple_local_planner.cpp
src/smooth_waypoint_planner/: CMakeLists.txt  package.xml  plugin_description.xml
src/smooth_waypoint_planner/config/: smooth_waypoint_planner_params.yaml
src/smooth_waypoint_planner/include/smooth_waypoint_planner/: catmull_rom.h  path_processing.h  smooth_waypoint_planner.h
src/smooth_waypoint_planner/src/: catmull_rom.cpp  path_processing.cpp  smooth_waypoint_planner.cpp
src/smooth_waypoint_planner/test/: test_path_processing.cpp
src/yolo_ros/: .gitignore  CMakeLists.txt  package.xml
src/yolo_ros/config/: mission_params.yaml
src/yolo_ros/launch/: mission.launch  yolo.launch  yolo_v2.launch
src/yolo_ros/results/: waypoint_14.txt  waypoint_5.txt
src/yolo_ros/scripts/: recognizer_node.py  test_yolo_batch.py
src/yolo_ros/src/: detect_ros.py  detect_ros_v2.py  recognizer_node.py
