<?xml version="1.0"?>
<package format="2">
  <name>simple_local_planner</name>
  <version>0.0.0</version>
  <description>The simple_local_planner package</description>

  <maintainer email="lbw@todo.todo">lbw</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <nav_core plugin="${prefix}/simple_local_planner.xml"/>
  </export>
</package>
