<?xml version="1.0"?>
<package format="2">
  <name>smooth_waypoint_planner</name>
  <version>0.1.0</version>
  <description>Smooth global planner for waypoint_editor_ros1 CSV routes.</description>

  <maintainer email="lbw@todo.todo">lbw</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <test_depend>gtest</test_depend>

  <export>
    <nav_core plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
